test_src/compiler_errors/literals/LongTooLargeError3.b
class LongTooLargeError3 {
    void test() {
        println(0x1234abcd5678cdef12L);
    }
}
